feat: introduce query parameter references, immutable bindings, and statement-level parameter layout.